<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.SettingsActivity">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/stop_recording_switch_set"
            style="@style/Settings"
            android:layout_marginTop="32dp"
            android:text="@string/stop_recording_settings" />

        <TextView
            style="@style/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_recording_settings_description"
            android:textStyle="bold|italic" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/show_notify_switch_set"
            style="@style/Settings"
            android:layout_marginTop="32dp"
            android:text="@string/show_notify_settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/password_switch_set"
            style="@style/Settings"
            android:layout_marginTop="32dp"
            android:text="@string/app_password_settings" />

        <Button
            android:id="@+id/btn_set_password_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/buttonsOff"
            android:text="@string/btn_set_password_settings"
            android:textColor="@color/white" />

        <FrameLayout
            android:id="@+id/fragment_form_password_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:backgroundTint="@color/cardview_dark_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/video_quality_settings"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/video_quality_radio_group"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_radio_group_background"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <RadioButton
                android:id="@+id/video_quality_low_radio_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:text="@string/video_quality_low"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:buttonTint="@color/selector_radio_button_color"/>

            <RadioButton
                android:id="@+id/video_quality_medium_radio_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:checked="true"
                android:text="@string/video_quality_medium"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:buttonTint="@color/selector_radio_button_color" />

            <RadioButton
                android:id="@+id/video_quality_high_radio_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:text="@string/video_quality_high"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:buttonTint="@color/selector_radio_button_color" />
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/app_name_switch_set"
            style="@style/Settings"
            android:layout_marginTop="32dp"
            android:text="@string/app_name_discreet_switch_text" />

        <TextView
            android:id="@+id/app_name_switch_set_msg"
            style="@style/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/app_name_discreet_switch_message"
            android:textStyle="bold|italic" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sd_card_dir_switch_set"
            style="@style/Settings"
            android:layout_marginTop="32dp"

            android:text="@string/sd_card_dir_switch_text" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/start_recording_on_boot_switch_set"
            style="@style/Settings"
            android:layout_marginTop="32dp"
            android:text="@string/start_recording_on_boot_switch_text" />
        <TextView
            android:id="@+id/start_recording_on_boot_switch_set_msg"
            style="@style/Settings"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/start_recording_on_boot_switch_message"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/privacy_policy_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/buttonsOn"
            android:textColorLink="@color/buttonsOff"
            android:text="@string/privacyPolicy"
            android:linksClickable="true"/>

    </LinearLayout>
</ScrollView>
