<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:theme="@style/Base.Theme.CameraApp"
    tools:context=".view.FormPasswordFragment">

    <EditText
        android:id="@+id/password_edit_text_form"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:autofillHints="username"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/repeat_password_edit_text"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="44dp"
        android:autofillHints="password"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColorHint="#546E7A" />

    <Button

        android:id="@+id/delete_password_btn_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top|end"
        android:text="@string/delete_password"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/send_password_btn_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center|top|start"
        android:layout_marginTop="100dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/buttonsOff"
        android:text="@string/btn_send_password_form" />

</FrameLayout>