<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/Base.Theme.CameraApp"
        tools:context=".view.PermissionsCheckActivity">

        <TextView
            android:id="@+id/disclaimer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/user_responsibility_disclaimer_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/disclaimer_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/disclaimer"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_title">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/user_responsibility_disclaimer_message"
                android:textSize="14sp" />

        </ScrollView>

        <LinearLayout
            android:id="@+id/disclaimer_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_scroll_view">

            <CheckBox
                android:id="@+id/disclaimer_accepted_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_agree_and_continue" />

            <Button
                android:id="@+id/disclaimer_accepted_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_continue"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
