<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.CamActivity">

        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_cam"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:id="@+id/linear_layout_cam_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@drawable/rounded_radio_group_background"
            app:layout_constraintTop_toBottomOf="@id/app_bar_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/cam_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/biometric_dialog_description"
                    android:src="@mipmap/cams_switch_round" />

                <Button
                    android:id="@+id/preview_cam_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preview_cam"
                    android:backgroundTint="@color/radio_group_background_color"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/buttonsOff" />

                <Button
                    android:id="@+id/video_capture_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/radio_group_background_color"
                    android:text="@string/start_capture"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/buttonsOff"
                    android:textStyle="bold"
                    android:visibility="visible"/>

                <Button
                    android:id="@+id/video_stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_capture"
                    android:backgroundTint="@color/buttonsOn"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_final_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_cam_switch">

                <TextView
                    android:id="@+id/recording_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="32dp"
                    android:text="@string/recording"
                    android:textSize="32sp"
                    android:visibility="gone"/>

                <androidx.camera.view.PreviewView
                    android:id="@+id/view_finder"
                    android:layout_width="@dimen/preview_width"
                    android:layout_height="@dimen/preview_height"
                    android:backgroundTint="@color/buttonsOff"
                    android:visibility="gone"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/adViewBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>